gcc/testsuite/rust/rustc/ui/rfcs/rfc-2632-const-trait-impl/impl-tilde-const-trait.rs
#![feature(const_trait_impl)]

struct S;
trait T {}

impl ~const T for S {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

